--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -3,7 +3,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Onemedia Bouncer{% endblock %}</title>
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
         <style>
             body {
                 padding-top: 60px;
@@ -12,29 +12,21 @@
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="brand" href="/"><img src="/images/logo.png" width="114" height="19" alt="Onemedia" /></a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li><a href="/">Bounces</a></li>
-                            <li><a href="/post-raw">Post Raw</a></li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div>
+            <div class="container">
+                <a class="navbar-brand" href="{{ path('bounces') }}"><img src="/images/logo.png" width="114" height="19" alt="Onemedia" /></a>
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ path('bounces') }}">Bounces</a></li>
+                    <li><a href="{{ path('complaints') }}">Complaints</a></li>
+                    <li><a href="{{ path('subscriptionConfirmations') }}">Subscription Confirmations</a></li>
+                    <li><a href="{{ path('postRaw') }}">Post Raw</a></li>
+                </ul>
             </div>
         </div>
-
         <div class="container">
             {% block body %}Body content{% endblock %}
         </div>
 
         <script src="//code.jquery.com/jquery.js"></script>
-        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
     </body>
 </html>
