--- a/src/views/_pagination.html.twig
+++ b/src/views/_pagination.html.twig
@@ -1,15 +1,19 @@
 {% set data = pagination.paginationData %}
-<p class="pull-left">{{ data.totalCount }} result(s)</p>
-{% if data.pageCount > 1 %}
-    <ul class="pagination pull-right">
-        {% if data.first < data.current %}
-            <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current-1})) }}">&laquo;</a></li>
+<div class="row">
+    <div class="col-lg-4">{{ data.totalCount }} result(s)</div>
+    <div class="col-lg-8">
+        {% if data.pageCount > 1 %}
+            <ul class="pagination pagination-sm pull-right">
+                {% if data.first < data.current %}
+                    <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current-1})) }}">&laquo;</a></li>
+                {% endif %}
+                {% for p in 1..data.lastPageInRange %}
+                    <li class="{% if p == data.current %}active{% endif %}"><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': p})) }}">{{ p }}</a></li>
+                {% endfor %}
+                {% if data.last > data.current %}
+                    <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current+1})) }}">&raquo;</a></li>
+                {% endif %}
+            </ul>
         {% endif %}
-        {% for p in 1..data.lastPageInRange %}
-            <li class="{% if p == data.current %}active{% endif %}"><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': p})) }}">{{ p }}</a></li>
-        {% endfor %}
-        {% if data.last > data.current %}
-            <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current+1})) }}">&raquo;</a></li>
-        {% endif %}
-    </ul>
-{% endif %}
+    </div>
+</div>
