--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -4,9 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Onemedia Bouncer{% endblock %}</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
         <style>
             body {
                 padding-top: 60px;
+            }
+            .pagination {
+                margin-top: 0;
             }
         </style>
     </head>
@@ -15,10 +19,10 @@
             <div class="container">
                 <a class="navbar-brand" href="{{ path('bounces') }}"><img src="/images/logo.png" width="114" height="19" alt="Onemedia" /></a>
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('bounces') }}">Bounces</a></li>
-                    <li><a href="{{ path('complaints') }}">Complaints</a></li>
-                    <li><a href="{{ path('subscriptionConfirmations') }}">Subscription Confirmations</a></li>
-                    <li><a href="{{ path('postRaw') }}">Post Raw</a></li>
+                    <li{% if 'bounces' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('bounces') }}">Bounces</a></li>
+                    <li{% if 'complaints' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('complaints') }}">Complaints</a></li>
+                    <li{% if 'subscriptionConfirmations' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('subscriptionConfirmations') }}">Subscription Confirmations</a></li>
+                    <li{% if 'postRaw' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('postRaw') }}">Post Raw</a></li>
                 </ul>
             </div>
         </div>
