--- a/src/views/notifications.html.twig
+++ b/src/views/notifications.html.twig
@@ -40,7 +40,25 @@
                     {% endfor %}
                     </tbody>
                 </table>
-                {% include '_pagination.html.twig' %}
+                {% set data = pagination.paginationData %}
+                <div class="row">
+                    <div class="col-lg-4">{{ data.totalCount }} result(s)</div>
+                    <div class="col-lg-8">
+                        {% if data.pageCount > 1 %}
+                            <ul class="pagination pagination-sm pull-right">
+                                {% if data.first < data.current %}
+                                    <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current-1})) }}">&laquo;</a></li>
+                                {% endif %}
+                                {% for p in 1..data.lastPageInRange %}
+                                    <li class="{% if p == data.current %}active{% endif %}"><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': p})) }}">{{ p }}</a></li>
+                                {% endfor %}
+                                {% if data.last > data.current %}
+                                    <li><a href="{{ path(app.request.get('_route'), app.request.query.all|merge({'page': data.current+1})) }}">&raquo;</a></li>
+                                {% endif %}
+                            </ul>
+                        {% endif %}
+                    </div>
+                </div>
             {% else %}
                 <p>No notifications available.</p>
             {% endif %}
