--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -17,11 +17,15 @@
     <body>
         <div class="navbar navbar-fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="{{ path('notifications') }}"><img src="/images/logo.png" width="114" height="19" alt="Onemedia" /></a>
-                <ul class="nav navbar-nav">
-                    <li{% if 'notifications' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('notifications') }}">Notifications</a></li>
-                    <li{% if 'postRaw' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('postRaw') }}">Post Raw</a></li>
-                </ul>
+                <a class="navbar-brand" href="{{ path('home') }}"><img src="/images/logo.png" width="114" height="19" alt="Onemedia" /></a>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <ul class="nav navbar-nav">
+                        <li{% if 'notifications' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('notifications') }}">Notifications</a></li>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li{% if 'postRaw' == app.request.get('_route') %} class="active"{% endif %}><a href="{{ path('postRaw') }}">Post Raw</a></li>
+                        {% endif %}
+                    </ul>
+                {% endif %}
             </div>
         </div>
         <div class="container">
